tests/derive_errors/struct/empty_cstruct.stderr
error: empty cstruct-like structs are unsupported
 --> tests/derive_errors/struct/empty_cstruct.rs:1:10
  |
1 | #[derive(jtd_derive::JsonTypedef)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `jtd_derive::JsonTypedef` (in Nightly builds, run with -Z macro-backtrace for more info)
